--- a/app/views/invoices/_item_fields.html.erb
+++ b/app/views/invoices/_item_fields.html.erb
@@ -27,7 +27,10 @@
         <%= ff.text_field :price, readonly: true, class: "form-input w-full", value: line_item.price, data: { recalculate_target: "price", itemselect_target: "select" } %>
       </div>
       <div class="w-1/12">
-        <%= ff.label t("iva"), class: "input-label uppercase text-center" %>
+        <div class="flex gap-1 items-baseline">
+          <%= ff.label t("iva"), class: "input-label uppercase text-center" %>
+          <span id="currency" class="text-xs">(%)</span>
+        </div>
         <%= ff.text_field :iva, readonly: true, class: "form-input w-full", value: number_with_precision(line_item.iva, precision: 0), data: { recalculate_target: "iva" } %>
       </div>
       <div class="w-1/3">
@@ -40,7 +43,7 @@
       <a class="text-red-600 hover:underline mt-3 cursor-pointer remove-link"
         data-action="click->removeitem#click recalculate#recalculate">
         <%= heroicon "x-mark", options: { id: "x-mark" }%>
-      </a>
     <% end %>
+      </a>
   </div>
 </div>
